# Laboratory

./: .gitignore  .gitmodules  CMakeLists.txt  flatpak_build.sh
.github/workflows/: build_and_test.yml
benchmarks/: Benchmarks.cpp
cmake.bak/: PamplejuceIPP.cmake  SharedCodeDefaults.cmake
modules/clap-juce-extensions/src/wrapper/: clap-juce-wrapper.cpp
packaging/: de.phi-labs.laboratory.desktop  de.phi-labs.laboratory.metainfo.xml  de.phi-labs.laboratory.yml  de.philabs.laboratory.desktop  de.philabs.laboratory.metainfo.xml  de.philabs.laboratory.yml
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
